--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tbody>
       <tr>
-        <td><img src="C:\Web Development\HTML - Personal Website\ce9e65d3910d3aa126228fb61425aae4.jpg" alt="Jean profile picture"></td>
+        <td><img src="ce9e65d3910d3aa126228fb61425aae4.jpg" alt="Jean profile picture"></td>
         <td>
           <h1>Jean Neffin</h1>
           <p><em>Student of <strong><a href="https://en.wikipedia.org/wiki/Mechanical_engineering">Mechanical Engineering</a></strong></em></p>
