--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li>Cooking</li>
   </ol>
 
-  <h3><a href="C:\Web Development\HTML - Personal Website\Contactme.html">Contact Me</a></h3>
+  <h3><a href="Contactme.html">Contact Me</a></h3>
   <hr>
   <table>
     <thead>
